gnome-clocks 50.alpha
=====================
* General improvements and bug fixes
* !352 Port shortcuts dialog to AdwShortcutsDialog
* !363 Add support for customizing the alarm bell. Requires ffmpeg on compile time
* !368 UI improvements for the stopwatch view
* !387 Use icu-i18n and icu-uc to format time spans
* !388 !392 Disable vala C warnings
* !357 Link to static.gnome.org for app screenshots
* Bugs fixed:
 - #158 Animate transition to lap table in stop watch
 - #159 Don’t show timer lapsed notification when Clocks is focused
 - #336 i18n: sentence is split
 - #426 The New Timer dialog isn't scrollable
* Translation updates

gnome-clocks 49.0
=================
* help-overlay: Fix F10 shortcut not showing
* world-location-dialog: Set the search entry as the default focus widget
* Translation updates

gnome-clocks 48.0
=================
 * Translations updates

gnome-clocks 48.beta
=================
 * Call setlocale() earlier to fix i18n
 * Make alarm setup dialog adaptive
 * Translation updates

gnome-clocks 48.alpha
=================
 * Add mnemonics to all buttons
 * Fix auto-focus behavior in the alarm dialog
 * Update metainfo metadata
 * Fix restoration of the window width and height
 * Port to CSS variables
 * Fix Help page
 * Fix translation of the application name
 * Translations updates

gnome-clocks 47.0
=================
 * Port to new libadwaita widgets
 * Translations updates

gnome-clocks 46.0
=================
 * Translations updates

gnome-clocks 46.rc
==================
 * Add mnemonic to Start button
 * Disable alarm after ringing when not set to repeat
 * Fix countdown timer progress during suspend
 * Fix resume bug on clear button pressed
 * Fix sorting of locations
 * Improve app metainfo for AppStream 1.0
 * Show a toast when a new alarm is set
 * Translations updates

gnome-clocks 45.0
=================
 * Port to new libadwaita widgets, including breakpoints
 * Bundle bell sounds
 * GNOME Shell search provider performance improvements