@@ -47,6 +47,17 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="50.beta" date="2026-01-31" type="development">
+      <description>
+        <p>A new release of Clocks</p>
+        <ul>
+          <li>New alarms default to the Toys sound</li>
+          <li>Fix duplicate timer notifications</li>
+          <li>Fix timers going off immediately</li>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
     <release version="50.alpha" date="2026-01-04" type="development">
       <description>
         <p>A new release of Clocks</p>
@@ -221,4 +232,3 @@
   <translation type="gettext">gnome-clocks</translation>
   <content_rating type="oars-1.0" />
 </component>
-
