@@ -1,7 +1,7 @@
 project(
   'gnome-clocks',
   ['vala', 'c'],
-  version: '50.alpha',
+  version: '50.beta',
   license: 'GPL-2.0-or-later',
   meson_version: '>= 0.60.0',
 )
