@@ -1,3 +1,13 @@
+gnome-clocks 50.beta
+====================
+* New alarms default to the Toys sound
+* Fix duplicate timer notifications
+* Fix timers going off immediately
+* Multiple code cleanups and simplifications
+* Many GObject properties are now construct-only
+* Many GObject properties are now read-only
+* Translation updates
+
 gnome-clocks 50.alpha
 =====================
 * General improvements and bug fixes
@@ -97,7 +107,7 @@ gnome-clocks 43.0
 
 gnome-clocks 43.beta
 ===================
- * Port to AdwAboutWindow - Christopher Davis 
+ * Port to AdwAboutWindow - Christopher Davis
  * Fix notifications are immediately withdrawn - Sophie Herold
  * Translations updates
 
@@ -549,4 +559,3 @@ gnome-clocks 0.1.0
 ==================
 
  * First release
-
